--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h3 {
 }
 
 .container {
+  height: 100%;
   width: 800px;
   min-height: 900px;
   border: 4px solid white;
@@ -63,6 +64,8 @@ h3 {
 }
 
 .content-wrapper {
+  min-height: 100%;
+  margin-bottom: -100px;
   display: flex;
 }
 
@@ -76,6 +79,21 @@ h3 {
   padding: 20px;
 }
 
+.footer {
+  display: flex;
+  padding: 20px;
+  background: rgb(208, 203, 203);
+  margin-top: 180px;
+  width: auto;
+  height: 20px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer h3 {
+  
+}
+
 .main p {
-  line-height: 20px;
+  line-height: 20px; 
 }
