--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ h3 {
   height: 100%;
   width: 14%;
   border: 2px solid grey
-
 }
 
 .nav ul {
@@ -59,6 +58,7 @@ h3 {
   font-weight: bold;
   border-right: 1px sold grey;
 }
+
 .nav li a:hover {
   background: rgb(67, 65, 65);
 }
@@ -90,9 +90,7 @@ h3 {
   align-items: center;
 }
 
-.footer h3 {
-  
-}
+.footer h3 {}
 
 .main p {
   line-height: 20px; 
